[project]
name = "ai-agents-using-graph-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.67.0",
    "groq>=1.1.1",
    "ipython>=9.10.0",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.11",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.1.2",
    "openai>=2.28.0",
]
